--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </header>
       <div class="hero flex items-centre justify-between">
         <div class="left flex-1 justify-center">
-        <img src="/image.png" alt="Profile">
+        <img src="https://d2w9m16hs9jc37.cloudfront.net/dimg/blog/2023/08/hockerty_woman_wearing_interview_outfit_conservative_outfit_cor_022f1a33_279c_4a17_a030_1c8bec621b5f.png" alt="Profile">
         </div>
         <div class="right flex-1">
         <h6>SUNAMI</h6>
