--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="right flex-1">
         <h6>SUNAMI</h6>
         <h1>I'm a Web<br> <span>Developer</span></h1>
-        <p> passionate about creating engaging and user-friendly websites that bring ideas to life on the digital canvas.A passion for crafting functional and visually appealing websites. With a keen eye for design and a strong understanding of web technologies, I strive to create user-friendly experiences that resonate with users. Whether it's coding responsive layouts, optimizing performance, or implementing interactive features, I enjoy the challenges that come with building for the web. Constantly learning and adapting to new trends and technologies, I am committed to delivering high-quality solutions.</p>
+        <p> passionate about creating engaging and user-friendly websites that bring ideas to life on the digital canvas.I am committed to delivering high-quality solutions.</p>
         <div>
         <button class="btn btn-secondary">DOWNLOAD CV</button>
         </div>
